<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/valor1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_Valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Valor2">

        <RadioButton
            android:id="@+id/Rb_1"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/Rb1" />

        <RadioButton
            android:id="@+id/Rb_2"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/Rb2" />

        <RadioButton
            android:id="@+id/Rb_3"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/Rb3" />

        <RadioButton
            android:id="@+id/Rb_4"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/Rb4" />
    </RadioGroup>

    <Button
        android:id="@+id/Boton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:onClick="calcular"
        android:text="@string/algo_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/TV_Resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Boton1" />

</androidx.constraintlayout.widget.ConstraintLayout>